src/app/artists/artists.module.css
.page {
  position: relative;
  background:  #0099AD 40%;
  display: grid;
  grid-template-rows: 20px 1fr 20px;
  align-items: center;
  justify-items: center;
  align-content: center;
  min-height: 30svh;
  font-family: var(--font-geist-sans);
  z-index: 1;
}

.date {
  position: absolute;
  top: 220px;
  left: 27%;
  z-index: 1;
  font-family: var(--font-gravity-bold);
}

.year {
  position: absolute;
  top: 220px;
  right: 27%;
  z-index: 1;
}

.LOGO_CREAM {
  position: absolute;
  top: 90px;
  left: 31%;
  z-index: 1;
  width: 100px;
  height: auto;
}

.logo {
  position: absolute;
  top: 90px;
  right: 30%;
  z-index: 1;
}

.trikk {
  position: absolute;
  top: 230px;
  z-index: 1;
}

.pageContent {
  display: flex;
  flex-direction: column;
  align-items: center;        
  justify-content: center;    
  background: #E7E7CE;
  color: black;
  z-index: 1;
  min-height: 50svh;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  overflow-x: hidden;
}

.gap {
  background: #E7E7CE;
  min-height: 100px;
  z-index: 1;
}

.wave {
  position: absolute;
  top: 140px;
  width: 1600px;
  z-index: -1;
}

.musicBanner {
  position: relative;
  margin-bottom: 50px;
}

.tfButton {
  position: relative;
}

.experience {
  position: relative;
  font-size: 40px;
  font-family: var(--font-gravity-bold), sans-serif;
  max-width: 50%;
  margin: 50 auto;
  text-align: center;
}

.tripleTrikks {
  display: grid;
  grid-template-columns: repeat(3, 2fr);
  column-gap: 100px;
  margin-bottom: 60px;
}

.fifteenMin {
  position: relative;
  font-size: 40px;
  font-family: var(--font-gravity-bold), sans-serif;
  max-width: 50%;
  margin: 50 auto;
  text-align: center;
}

.yellow {
  display: grid;
  column-gap: 0;
  overflow: hidden;
  position: relative;
  z-index: 2;
}

.yellowTop {
  margin-top: -10px;
  margin-bottom: -30px;
}

.yellowBottom {
  margin-top: -30px;
  margin-bottom: -10px;
}

.orangeBackground {
  display: grid;
  background-color: #ed5c10;
  width: 100vw;

  overflow: visible;

  align-items: center;
  justify-items: center;
  align-content: center;
}

.artistsTitle {
  display: grid;              
  grid-template-columns: repeat(2, 2fr);
  align-items: center;
  justify-items: center;
  align-content: center;
  width: 100%;
  min-height: 120px;
}

.artistsText{
  font-size: 50px;
  color: yellow;
}

.artists {
  display: grid;              
  grid-template-columns: repeat(3, 1fr);
  width: 30%;
  margin: 80px;
  row-gap: 50px;
  
}

.seeArtists {
  background: #ed5c10;
  width: 100vw;
  text-align: center;
  padding-top: 40px;
  padding-bottom: 40px;
}

.oval {
  background: yellow;
  border-radius: 10px;
  padding: 20px;             
  width: max-content;         
  height: 55px;
  width: 200px;
  margin: 0 auto 20;
  text-align: center;
}

.tramAndDate {
  position: relative;   
  width: 800px;         
  margin: 0 auto;       
}

.tramPic {
  display: block;
  width: 100%;
  height: auto;
  position: relative;
  z-index: 1;
}

.tramDate {
  position: absolute;    
  top: 50%;             
  left: 50%;             
  transform: translate(-50%, -50%);
  z-index: 2;
}

.tripleTrams {
  display: grid;              
  grid-template-columns: repeat(3, 1fr);
  width: 30%;
  margin: 0 auto;
  row-gap: 500px;
  position: relative;
  z-index: 3;
}

.artistNames {
  top: 50px;
  position: relative;
  min-height: 200px;
}

.wavyOrange {
  z-index: 2;
  margin-top: -20px;
  margin-bottom: 100px;
}

.moreInfo {
  display: grid;              
  grid-template-columns: repeat(2, 1fr);
  width: 30%;
  margin: 0 auto;
  row-gap: 100px;
  column-gap: 50px;
  position: relative;
  margin-bottom: 100px;
  align-items: center;
  justify-items: center;
  align-content: center;
}

.photo {
  height: auto;
  margin-bottom: 20px;
}

.volunteer {
  display: grid;
  place-items: center;
  margin: auto;
  position: relative;
  
}

.volunteerTitle {
  font-size: 30px;
  font-family: "House Soft Narrow", sans-serif;
  color: #ed5c10;
  margin: 0 auto;
  text-align: center;
}


.volunteerText {
  font-size: 15px;
  font-family: var(--font-gravity-bold);
  color: #ed5c10;
  margin: 25 auto;
  text-align: center;
  min-width: 400px;
}

.readMore {
  height: auto;
  margin-bottom: 5px;
  color: #E7BD08;
  font-size: 25px;
}

.fromEngen {
  display: grid;
  place-items: center;
  margin: auto;
  position: relative;
}

.endBanners {
  margin-bottom: 50px;
}

.blueWave {
  z-index: 2;
  margin-top: -20px;
  margin-bottom: -10px;
  width: auto;
  overflow: hidden;
  position: relative;
}

@media screen and (max-width: 1000px) {

.page {
  position: relative;
  background:  #0099AD 40%;

  display: grid;
  grid-template-rows: 20px 1fr 20px;
  align-items: center;
  justify-items: center;
  align-content: center;
  min-height: 50svh;

  font-family: var(--font-geist-sans);
  z-index: 1;
}

.topRow {
  display: grid;
  grid-auto-flow: column;  /* flow items in a single row */
  grid-auto-columns: auto; /* size each column to its content */
  gap: 50px;               /* space between items */
  align-items: center;
}

.date {
  position: static;
  z-index: 1;
  bottom: auto;
}


.LOGO_CREAM {
  position: static;
  z-index: 1;
  height: auto;
  width: 80;
}

.logo {
  position: static;
  z-index: 1;
}

.trikk {
  position: relative;
  top: 330px;
  z-index: 1;
  width: 100%;
  top: 50px;
  height: auto;
  margin-top: 10px;
}

.pageContent {
  display: flex;
  flex-direction: column;
  background: #E7E7CE;
  color: black;
  z-index: 1;
  align-items: center;
  justify-content: center;
  min-height: 50svh;
  max-width: 100vw;
  overflow-x: hidden;
  padding: 0 1rem; /* Optional spacing */
  box-sizing: border-box;
}


.gap {
  background: #E7E7CE;
  min-height: 150px;
  z-index: 1;
}

.wave {
  position: absolute;
  top: 120px;
  width: 1000%;
  z-index: -1;
}

.musicBanner {
  position: static;
  max-width: 100%;
  height: auto;
}

.tfButton {
  position: static;
  max-width: 100%;
  height: auto;
}

.experience {
  position: static;
  max-width: 100%;
  height: auto;
}

.tripleTrikks {
  height: auto;
  display: grid;
  grid-template-columns: repeat(3, 2fr);
  column-gap: 10px;
  margin-bottom: 50px;
}

.singleTrikk {
  position: static;
  max-width: 100%;
  height: auto;
}

.fifteenMin {
  position: static;
  max-width: 100%;
  height: auto;
}

.yellow {
  display: grid;
  column-gap: 0;
  overflow: hidden;
  position: relative;
  z-index: 2;
}

.yellowTop {
  margin-top: -10px;
  margin-bottom: -30px;
  width: 100vw;
}

.yellowBottom {
  margin-top: -30px;
  margin-bottom: -10px;
  width: 100vw;
}

.orangeBackground {
  display: flex;
  flex-direction: column;
  background-color: #ed5c10;
  width: 100vw;

  overflow: visible;

  align-items: center;
  justify-items: center;
  align-content: center;
 
}

.artistsTitle {
  display: grid;              
  grid-template-columns: repeat(2, 2fr);
  align-items: center;
  justify-items: center;
  align-content: center;
  width: 98%;
  margin: 0 auto;
  min-height: 100px;
}

.artists {
  display: grid;              
  grid-template-columns: repeat(3, 1fr);
  width: 30%;
  margin: 80px;
  row-gap: 50px;
  
}

.seeArtists {
  background: #ed5c10;
  width: 100vw;
  text-align: center;
  padding-top: 40px;
  padding-bottom: 40px;
}

.oval {
  background: yellow;
  border-radius: 10px;
  padding: 20px;             
  width: max-content;         
  height: 55px;
  width: 200px;
}

.tramAndDate {
  position: relative;   
  width: 800px;         
  margin: 0 auto;       
}

.tramPic {
  display: block;
  width: 100%;
  height: auto;
  position: relative;
  z-index: 1;
}

.tramDate {
  position: absolute;    
  top: 50%;             
  left: 50%;             
  transform: translate(-50%, -50%);
  z-index: 2;
}

.tripleTrams {
  height: auto;
  display: flex;
  grid-template-columns: repeat(3, 2fr);
  column-gap: 10px;
  margin-bottom: 50px;
  width: 100%;
}

.artistNames {
  top: 50px;
  position: relative;
  min-height: 200px;
}

.wavyOrange {
  z-index: 2;
  margin-top: -20px;
  margin-bottom: 100px;
}

.moreInfo {
  display: grid;              
  grid-template-columns: repeat(1, 1fr);
  width: 100%;
  margin: 0 auto;
  row-gap: 100px;
  column-gap: 50px;
  position: relative;
  margin-bottom: 100px;
  align-items: center;
  justify-items: center;
  align-content: center;
}

.photo {
  height: auto;
  width: 100%;
  margin-bottom: 20px;
}

.volunteer {
  display: grid;
  place-items: center;
  margin: auto;
  position: relative;
}

.volunteerText {
  font-size: 10px;
  
}

.readMore {
  height: auto;
  margin-bottom: 5px;
}

.fromEngen {
  display: grid;
  place-items: center;
  margin: auto;
  position: relative;
}

.endBanners {
  width: 100%;
  height: auto;
}

.blueWave {
  z-index: 2;
  margin-top: -20px;
  margin-bottom: -10px;
  width: auto;
  overflow: hidden;
  position: relative;
}

}

